--- a/fifa-front/dashboard-app/src/app/create-player/create-player.component.html
+++ b/fifa-front/dashboard-app/src/app/create-player/create-player.component.html
@@ -1,17 +1,22 @@
+<body>
 <div class="container">
   <h2>Crear Nuevo Jugador</h2>
   <form (ngSubmit)="onSubmit()" #playerForm="ngForm" class= "form-group">
     <div>
       <label for="name">Nombre  </label>
-      <input type="text" id="name" name="name" [(ngModel)]="player.name" required>
+      <input type="text" id="name" name="name" [(ngModel)]="player.long_name" required>
     </div>
     <div>
       <label for="age">Edad  </label>
       <input type="number" id="age" name="age" [(ngModel)]="player.age" required>
     </div>
     <div>
-      <label for="team">Equipo  </label>
-      <input type="text" id="team" name="team" [(ngModel)]="player.team" required>
+      <label for="club">Club</label>
+      <input type="text" id="club" name="club" [(ngModel)]="player.club_name" required>
+    </div>
+    <div>
+      <label for="nationality">Nacionalidad  </label>
+      <input type="text" id="nationality" name="nationality" [(ngModel)]="player.nationality_name" required>
     </div>
     <div>
       <button type="submit" [disabled]="!playerForm.valid">Crear Jugador</button>
@@ -24,3 +29,4 @@
     <p>{{ successMessage }}</p>
   </div>
 </div>
+</body>
