--- a/fifa-front/dashboard-app/src/app/navbar/navbar.component.html
+++ b/fifa-front/dashboard-app/src/app/navbar/navbar.component.html
@@ -3,8 +3,8 @@
   <ul>
     <li><a href="#" (click)="navigateTo('dashboard', $event)">Skill por Jugador</a></li>
     <li><a href="#" (click)="navigateTo('users', $event)">Listado Jugadores</a></li>
-    <li><a href="#" (click)="navigateTo('settings', $event)">Actualizar Jugador</a></li>
-    <li><a href="#" (click)="navigateTo('reports', $event)">Crear Jugador</a></li>
+    <li><a href="#" (click)="navigateTo('updatePlayer', $event)">Actualizar Jugador</a></li>
+    <li><a href="#" (click)="navigateTo('createPlayer', $event)">Crear Jugador</a></li>
     <li><button (click)="logout()">Logout</button></li>
   </ul>
 </nav>
