--- a/fifa-front/dashboard-app/src/app/update-play/update-play.component.html
+++ b/fifa-front/dashboard-app/src/app/update-play/update-play.component.html
@@ -1,12 +1,12 @@
-<section>
-  <h2>Ingrese id del jugador a buscar</h2>
-
+<body>
+  
   <div class="searchId">
+    <h2>Ingrese id del jugador a buscar</h2>
     <input [(ngModel)]="playerId" placeholder="Ingrese ID del jugador" id="playerId" />
     <button (click)="searchPlayer()">Buscar</button>
   </div>
 
-  <div class="contenedor">
+  <div class="conteiner">
     <div class="player-container">
       <div *ngIf="player" class="player-details">
            <h2>Datos del Jugador Encontrado</h2>
@@ -60,4 +60,4 @@
   <div *ngIf="errorMessage">
     <p>{{ errorMessage }}</p>
   </div>
-</section>
+</body>
