--- a/fifa-front/dashboard-app/src/styles.css
+++ b/fifa-front/dashboard-app/src/styles.css
@@ -1,1 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
+body {
+  font-family: 'Arial', sans-serif;
+  margin: 20px;
+  padding: 20px;
+  background-color: #6CBDF0;  /* Color de fondo suave */
+  color: #333;  /* Color del texto */
+}
